# SecondOpinion

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: P0 Iclr Review Audit Project Plan.docx  SecondOpinion_one_slide_case_study_v3.pptx  SecondOpinion_one_slide_report.pptx  SecondOpinion_one_slide_report_english_v2.pptx  SecondOpinion_one_slide_report_fixed.pptx  SecondOpinion_one_slide_v4.pptx  SecondOpinion_one_slide_v5.pptx  SecondOpinion_one_slide_v6_large_text.pptx  SecondOpinion_one_slide_v7_presentation.pptx  SecondOpinion_one_slide_v8_middle_flow.pptx  SecondOpinion_one_slide_v9_long_review.pptx  build_one_slide_v9_long_review.py  external_scoring_memory_status_v0.1.md  external_scoring_memory_status_v0.2.md  homepage_masthead_redesign_v0.2.md  homepage_ranking_redesign_previews_v0.1.html  homepage_redesign_v0.1_implementation.md  homepage_review_quality_update_2026-07-14.md  non_iaa_fast_track_plan.md  production_debug_launch_v0.1.md  project_progress_2026-07-09.md  release_checklist_2025_v1.md  review_scoring_snapshot_CEBB2izG6I.html  reviewer_comment_scoring_schema_v0.1.md  reviewer_fun_layer_spec_v0.2.md  reviewer_fun_layer_ui_mockup_v0.1.html  reviewer_score_social_design_v0.1.md  secondopinion-mvp-design-notes.md  secondopinion_dataset_map_v0.1.md  secondopinion_public_homepage_design_v0.1.md  server_api_rollout_v0.1.md  标注手册.md  验证策略与并行工作计划.md
examples/: sample_normalized_dataset.json
frontend/: app.js  index.html  methodology.html  privacy.html  styles.css  terms.html
(+640 files in other folders)
