[project]
name = "secondopinion"
version = "0.1.0"
description = "Evidence-grounded review quality audit MVP for OpenReview venues."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pypdf>=4.0",
]

[project.scripts]
secondopinion = "secondopinion.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"secondopinion.prompts" = ["*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
