[project]
name = "secondopinion"
version = "0.1.0"
description = "Evidence-grounded review quality audit MVP for OpenReview venues."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pypdf>=4.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
]

[project.scripts]
secondopinion = "secondopinion.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"secondopinion.prompts" = ["*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]

